# gool

./: .clang-tidy  .gitignore  .lizard-whitelist  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  RELEASING.md  SETUP.md
examples/: CMakeLists.txt  README.md
examples/01_quickstart/: README.md  project.godot
examples/02_audition/: README.md  fps_player.gd  fps_player.tscn  main.tscn  project.godot
examples/02_audition/addons/gool/: multiplayer_bridge.gd  plugin.gd  runtime_singleton.gd
examples/03_voice_chat/: README.md  main.tscn  project.godot
examples/03_voice_chat/addons/gool/: audio_relevancy_filter.gd
examples/03_voice_chat/scripts/: main.gd  voice_capture.gd
examples/04_coop_shooter_template/: README.md  project.godot
examples/04_coop_shooter_template/addons/gool/: audio_relevancy_filter.gd  plugin.gd
examples/04_coop_shooter_template/gool/: config.json
examples/04_coop_shooter_template/scripts/: ai_bot.gd  main.gd  weapon.gd
examples/05_multiplayer_audio_sandbox/: README.md  project.godot
examples/05_multiplayer_audio_sandbox/scenes/: box_level.tscn  fps_player.tscn  peer_cube.tscn
examples/05_multiplayer_audio_sandbox/scripts/: box_level.gd  lobby.gd  peer_cube.gd
examples/audition/: README.md  audition_builder.gd  project.godot
examples/audition/addons/gool/: gool_presets.gd  plugin.cfg
examples/coop_4p_minimal/: README.md  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
examples/coop_4p_minimal/.godot/: global_script_class_cache.cfg
examples/coop_4p_minimal/.godot/editor/: editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  project_metadata.cfg  script_editor_cache.cfg
examples/coop_4p_minimal/.godot/imported/: Ubuntu-Bold.ttf-b0773c1d3d3cd01957938ea2d975c32b.fontdata  Ubuntu-Bold.ttf-b0773c1d3d3cd01957938ea2d975c32b.md5  Ubuntu-Italic.ttf-5410c98dc9f10412cd3ec9bbe81e7e1e.fontdata  Ubuntu-Italic.ttf-5410c98dc9f10412cd3ec9bbe81e7e1e.md5  Ubuntu-Medium.ttf-b7906b7a22bb85ec45fba686b63b3c2a.fontdata  Ubuntu-Medium.ttf-b7906b7a22bb85ec45fba686b63b3c2a.md5  Ubuntu-Regular.ttf-9dec4f8121587f8aeb4c0aba8f10fca8.fontdata  Ubuntu-Regular.ttf-9dec4f8121587f8aeb4c0aba8f10fca8.md5  audio_emitter_3d.svg-1a11e63c0c4e401e5a872f99c5a7e5b5.ctex  audio_emitter_3d.svg-1a11e63c0c4e401e5a872f99c5a7e5b5.md5  coop_audio_root.svg-1d9407e6825074c6606819ab5fd254d4.ctex  coop_audio_root.svg-1d9407e6825074c6606819ab5fd254d4.md5  footstep_surface_player.svg-e082af8374bc8c62a05ddcf23a2cf80f.ctex  footstep_surface_player.svg-e082af8374bc8c62a05ddcf23a2cf80f.md5  fps_coop_audio.svg-6376d8ccf33a41c4e19facd0dad656cc.ctex  fps_coop_audio.svg-6376d8ccf33a41c4e19facd0dad656cc.md5  gool_debug_overlay.svg-9251f02f2233d45f26fc206ab2ee3def.ctex  gool_debug_overlay.svg-9251f02f2233d45f26fc206ab2ee3def.md5  gool_listener_3d.svg-acee06bf3e33fecb4743821335adb04f.ctex  gool_listener_3d.svg-acee06bf3e33fecb4743821335adb04f.md5  gool_master_fx_profile.svg-d00ddc23170af8f4a0ec4430fd190a38.ctex  gool_master_fx_profile.svg-d00ddc23170af8f4a0ec4430fd190a38.md5  gool_scene_profile.svg-830a2bbfd55fbcc369a824b6e949b76d.ctex  gool_scene_profile.svg-830a2bbfd55fbcc369a824b6e949b76d.md5  (+20 more)
examples/coop_4p_minimal/sounds/: bank.tres
examples/coop_shooter_template/: README.md  main.tscn
examples/coop_shooter_template/scripts/: audio_setup.gd  combat_music_director.gd  player_controller.gd
examples/cpp/ducking/: main.cpp
examples/cpp/hello_audio/: main.cpp
examples/cpp/minimal/: main.cpp
examples/cpp/multi_tier_ducking/: main.cpp
examples/cpp/music_crossfade/: main.cpp
examples/cpp/playback/: main.cpp
examples/cpp/sound_bank/: main.cpp
examples/cpp/streaming/: main.cpp
examples/cpp/telemetry/: main.cpp
examples/ducking/: main.cpp
examples/hello_audio/: main.cpp
examples/minimal/: main.cpp
examples/multi_tier_ducking/: main.cpp
examples/multiplayer_audio_sandbox/: README.md  project.godot
examples/multiplayer_audio_sandbox/gool/: config.json
examples/multiplayer_audio_sandbox/scenes/: box_level.tscn  lobby.tscn
examples/multiplayer_audio_sandbox/scripts/: audio_setup.gd  box_level.gd  fps_player.gd  lobby.gd  network_manager.gd  peer_cube.gd
examples/quickstart/: README.md  main.gd  main.tscn
examples/sound_bank/: main.cpp
examples/voice_chat/: README.md
examples/voice_chat/gool/: config.json
examples/voice_chat/scripts/: voice_loopback_receiver.gd
godot/: CMakeLists.txt  README.md
godot/addons/gool/: .editorconfig  audio_settings.gd  dialogue_director.gd  gool_presets.gd  logging.gd  logging_context.gd  multiplayer_bridge.gd  plugin.cfg  plugin.gd  runtime_singleton.gd
godot/addons/gool/editor/: config_model.gd  (+11 more)
godot/example/: audio_demo.gd
godot/src/: gool_godot.cpp
tests/: CMakeLists.txt
tests/bench/: audio_mixer_bench.cpp  bench_util.h  parameter_smoother_bench.cpp  rtpc_eval_bench.cpp
tests/fuzz/: fuzz_audio_decoders.cpp  fuzz_bus_config_json.cpp  fuzz_opus_voice.cpp
tests/godot/smoke/: main.gd  main.tscn  project.godot
tests/python/: test_config_patcher.py
tests/unit/: air_absorption_test.cpp  aligned_float_buffer_test.cpp  binaural_spatializer_test.cpp  biquad_eq_test.cpp  bus_config_loader_test.cpp  bus_graph_test.cpp  compressor_profile_test.cpp  compressor_test.cpp  crossfade_test.cpp  decoder_test.cpp  default_bounds_validator_test.cpp  denormal_protection_test.cpp  determinism_test.cpp  doppler_smoothing_test.cpp  global_parameter_test.cpp  gpak_test.cpp  integration_kitchen_sink_test.cpp  jitter_buffer_test.cpp  json_escape_test.cpp  logging_test.cpp  loop_crossfade_test.cpp  master_control_test.cpp  material_eq_audition_test.cpp  material_eq_curve_test.cpp  material_occlusion_test.cpp  memory_budget_test.cpp  multiplayer_readiness_test.cpp  occlusion_lpf_test.cpp  priority_eviction_test.cpp  production_readiness_test.cpp  replicated_events_test.cpp  replication_rate_limit_test.cpp  reverb_send_test.cpp  saturation_profile_test.cpp  saturation_test.cpp  shipped_artifacts_test.cpp  slot_map_test.cpp  sound_bank_test.cpp  sound_registry_introspection_test.cpp  sound_rtpc_test.cpp  (+8 more)
(+382 files in other folders)
